@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: pkge.c,v 1.12 2010/02/22 23:31:42 nijtmans Exp $
+ * RCS: @(#) $Id: pkge.c,v 1.13 2010/03/27 22:47:04 nijtmans Exp $
  */
 
 #include "tcl.h"
@@ -48,7 +48,7 @@ Pkge_Init(
 {
     static const char script[] = "if 44 {open non_existent}";
 
-    if (Tcl_InitStubs(interp, TCL_VERSION, 0) == NULL) {
+    if (Tcl_InitStubs(interp, "8.1", 0) == NULL) {
 	return TCL_ERROR;
     }
     return Tcl_Eval(interp, script);
